--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,6 @@ serde = "1.0"
 serde_json = "1.0"
 serde_derive = "1.0"
 base64 = "0.12"
+thiserror = "1.0"
 reqwest = { version = "0.10", features = ["json"] }
 tokio = { version = "0.2", features = ["macros"] }
