--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -24,10 +24,10 @@ jobs:
             ~/.cargo/registry
             ~/.cargo/git
             target
-          key: v1-${{ runner.os }}-debug-${{ hashFiles('Cargo.lock') }}
+          key: v1-${{ matrix.os }}-debug-${{ hashFiles('Cargo.lock') }}
           restore-keys: |
-            v1-${{ runner.os }}-debug
-            v1-${{ runner.os }}
+            v1-${{ matrix.os }}-debug
+            v1-${{ matrix.os }}
             v1
       - name: Setup
         run: rustup component add clippy
@@ -39,5 +39,5 @@ jobs:
         run: cargo build
       - uses: actions/upload-artifact@v2
         with:
-          name: consulator-${{ runner.os }}
+          name: consulator-${{ matrix.os }}
           path: target/debug/consulator
