--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   create-release:
     runs-on: ubuntu-latest
+    outputs:
+      upload_url: ${{ steps.create-release.outputs.upload_url }}
     steps:
       - name: Create release
         id: create-release
@@ -19,8 +21,6 @@ jobs:
           release_name: ${{ github.ref }}
           draft: false
           prerelease: false
-      - name: Set output
-        run: echo "::set-output name=upload_url::${{ steps.create-release.outputs.upload_url }}"
 
   lint-test-build:
     runs-on: ${{ matrix.os }}
